[gd_scene load_steps=3 format=3 uid="uid://blj78hrel3xga"]

[ext_resource type="Script" path="res://ui_impl/winline_ui_impl.gd" id="1_hedgu"]
[ext_resource type="Texture2D" uid="uid://b41av1v3nhokt" path="res://ball.tres" id="2_p13h3"]

[node name="WinlineUiImpl" type="CanvasLayer"]
script = ExtResource("1_hedgu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 9

[node name="NextComingContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/NextComingContainer"]
layout_mode = 2

[node name="NextComingLabel" type="Label" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
text = "Next:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextBall1" type="TextureRect" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_p13h3")

[node name="NextBall2" type="TextureRect" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_p13h3")

[node name="NextBall3" type="TextureRect" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_p13h3")

[node name="ScoreLabel" type="Label" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartBtn" type="Button" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenuBtn" type="Button" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="ExitBtn" type="Button" parent="HBoxContainer/NextComingContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="HBoxContainer/NextComingContainer/VBoxContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/NextComingContainer/VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/NextComingContainer/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
